Fix word wrap and clean ui

--- a/frontend/src/EditNoteForm.css
+++ b/frontend/src/EditNoteForm.css
@@ -25,11 +25,13 @@ html, body, .app {
 
 .popup_inner {
     border-radius: 25px;
+    max-width: 300px;
+    overflow: scroll;
     position: absolute;
-    left: 25%;
-    right: 25%;
-    top: 25%;
-    bottom: 25%;
+    left: 10%;
+    right: 10%;
+    top: 10%;
+    bottom: 10%;
     margin: auto;
     background: white;
 }
